team structure has been added

--- a/main.css
+++ b/main.css
@@ -430,7 +430,7 @@ th {
 
 
 /*-------------------------------------*/
-/* PAGE: HOME */
+/* PAGE: CONTACT */
 
 
 /*-------------------------------------*/
