add team structure without <li> closed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,6 +165,13 @@ th {
   padding: 40px 0;
 }
 
+.heading-secondary {
+  font-size: 160%;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 20px 0;  
+}
+
 .ul-base {
   padding: 0;
   list-style-type: none;
@@ -225,6 +232,18 @@ th {
 }
 
 
+/* Helpers: Overlay */
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+
 /* Helpers: Full-width */
 
 .full-width {
@@ -235,6 +254,14 @@ th {
 
 /* Helpers: Full-width backgrounds */
 
+.background-block {
+  color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 40px 0;
+  position: relative;
+}
 
 
 /*-------------------------------------*/
@@ -421,6 +448,24 @@ th {
 
 /* Team: Join */
 
+.background-block--job {
+  background-image: url("../../assets/img/team/jobs/at-work.jpg");
+  margin: 40px 0 0 0;
+}
+
+.job-info {
+  position: relative;
+  z-index: 1;
+}
+
+.job-positions-block {
+  margin: 25px 0 0 0;
+}
+
+.job-positions-each {
+  padding: 15px 0 0 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
 
 /* Team: Work with us */
 
@@ -430,7 +475,7 @@ th {
 
 
 /*-------------------------------------*/
-/* PAGE: HOME */
+/* PAGE: CONTACT */
 
 
 /*-------------------------------------*/
