form structure has been added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,6 +232,10 @@ th {
 }
 
 
+/* Helpers: Forms */
+
+
+
 /* Helpers: Overlay */
 
 .overlay {
@@ -468,6 +472,13 @@ th {
 }
 
 /* Team: Work with us */
+
+@media only screen and (min-width: 700px) {
+  .form-join-each {
+    width: 33.33%;
+    float: left;    
+  }
+}
 
 
 /*-------------------------------------*/
