feature html has been added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,6 +544,12 @@ th {
 /* PAGE: FEATURED */
 
 
+/* Featured: Sites */
+
+
+/* Featured: Submit a Site */
+
+
 /*-------------------------------------*/
 /* PAGE: CONTACT */
 
