contact structure has been added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -634,6 +634,19 @@ th {
 /* PAGE: CONTACT */
 
 
+/* Contact: Address */
+
+
+/* Contact: Email block */
+
+
+/* Contact: Google Map */
+
+
+/* Contact: Social Media */
+
+
+
 /*-------------------------------------*/
 /* MEDIA QUERIES */
 
