--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,6 +302,25 @@ th {
 }
 
 
+/* Helpers: Iframe Videos: Responsive */
+
+.iframe-video-block {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.iframe-video-block iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 /* Helpers: Overlay */
 
 .overlay {
@@ -498,11 +517,63 @@ th {
 
 /* Overview: Video Block */
 
+.overview-video-block {
+  color: #bbb;
+  background-color: #444;
+  padding: 0 0 70px 0;
+}
 
 /* Overview: Steps Block */
 
+.liquidapt-steps-block {
+  text-align: center;
+}
+
+.liquidapt-steps-each {
+  display: block;
+  margin: 10px 0;
+}
+
+.liquidapt-steps-info {
+  text-transform: uppercase;
+}
+
+@media only screen and (min-width: 600px) {
+  .liquidapt-steps-each {
+    width: 33.33%;
+    float: left;
+  }
+}
+
 
 /* Overview: Why LiquidApt */
+
+.liquidapt-usage-each {
+  color: #fff;
+}
+
+.liquidapt-usage-each:nth-of-type(odd) {
+  background-color: #555;
+}
+
+.liquidapt-usage-each:nth-of-type(even) {
+  background-color: #444;
+}
+
+.liquidapt-usage-info ul {
+  padding: 20px;
+}
+
+@media only screen and (min-width: 700px) {
+  .liquidapt-usage-info, .liquidapt-usage-img {
+    width: 50%;
+    float: left;
+  }
+
+  .liquidapt-usage-each:nth-of-type(even) .liquidapt-usage-info {
+    float: right;
+  }
+}
 
 
 /* Overview: Theme Block */
