header and overview css update

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -247,6 +247,38 @@ th {
 }
 
 
+/* Helpers: Tables */
+
+.table {
+  width: 100%;
+}
+
+.table th {
+  text-transform: uppercase;
+}
+
+.table td, .table th {
+  border: 1px solid #bbb;
+}
+
+
+/* Helpers: Tables Reponsive */
+
+@media only screen and (max-width: 899px) {
+  .table-responsive, .table-responsive thead, .table-responsive tbody, .table-responsive tr, .table-responsive td, .table-responsive th {
+    display: block;
+  }
+
+  .table-responsive thead {
+    display: none;
+  }
+
+  .table-responsive tr {
+    margin: 0 0 25px 0;
+  }
+
+}
+
 /* Helpers: Forms */
 
 .field-block {
