--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,8 @@ body {
 }
 
 body, input, select, button {
-  font-family: sans-serif;
-  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-size: 17px;
   color: #222;
 }
 
@@ -86,6 +86,7 @@ h1 {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: "Merriweather", serif;
   padding: 0 0 15px 0;
 }
 
@@ -307,7 +308,7 @@ th {
 }
 
 .input-text:focus {
-  border: 1px solid #888;
+  border: 1px solid #9D67AD;
   outline: 0;
 }
 
@@ -320,7 +321,7 @@ th {
 
 .button {
   color: #fff;
-  background-color: #777;
+  background-color: #9D67AD;
   text-transform: uppercase;
   padding: 10px 20px;
   display: inline-block;
@@ -328,10 +329,29 @@ th {
   transition: all 0.2s linear;
 }
 
+a.button {
+  color: #fff;
+}
+
 .button:hover, .button:focus {
   background-color: #444;
   transition: all 0.2s ease-in;
 }
+
+.button-hollow {
+  color: #777;
+  background-color: #fff; 
+  border: 1px solid; 
+}
+
+a.button-hollow {
+  color: #777;
+}
+
+a.button-hollow:hover, a.button-hollow:focus {
+  color: #fff;
+}
+
 
 
 /* Helpers: Iframe Videos: Responsive */
@@ -483,8 +503,9 @@ th {
 /* Header: Logo */
 
 .logo {
-  padding: 10px 0 0 0;
+  font-family: "Damion", cursive;
   display: block;
+  padding: 10px 0 0 0;
 }
 
 /* Header: Navigation */
@@ -551,8 +572,22 @@ th {
 /*-------------------------------------*/
 /* PAGE: HOME */
 
+.banner-img-block {
+  margin: 0 0 20px 0;
+}
 
 
+@media only screen and (min-width: 600px) {
+  .banner-img-block {
+    width: 840px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .banner-img {
+    float: left;
+  }
+}
 
 /*-------------------------------------*/
 /* PAGE: OVERVIEW */
