--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,13 +11,13 @@ html, body {
 
 body {
   line-height: 1.6;
-  background-color: #fff;
+  background-color: #eee;
 }
 
 body, input, select, button {
   font-family: "Lato", sans-serif;
   font-size: 17px;
-  color: #222;
+  color: #555;
 }
 
  
@@ -32,6 +32,7 @@ a {
 
 a:hover, a:focus {
   color: inherit;
+  opacity: 0.8;
   transition: all 0.2s ease-in;
 }
 
@@ -167,12 +168,14 @@ th {
 
 .heading-primary {
   font-size: 220%;
+  font-weight: 300;
+  font-family: inherit;
   text-align: center;
   padding: 40px 0;
 }
 
 .heading-secondary {
-  font-size: 160%;
+  font-size: 130%;
   text-align: center;
   text-transform: uppercase;
   padding: 20px 0;  
@@ -287,6 +290,7 @@ th {
 }
 
 .label {
+  font-weight: 300;
   text-align: center;
   padding: 0 0 10px 0;
   display: block;
@@ -303,7 +307,7 @@ th {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.05);
   border: 1px solid #bbb;
 }
 
@@ -321,6 +325,7 @@ th {
 
 .button {
   color: #fff;
+  font-weight: 300;
   background-color: #9D67AD;
   text-transform: uppercase;
   padding: 10px 20px;
@@ -334,7 +339,7 @@ a.button {
 }
 
 .button:hover, .button:focus {
-  background-color: #444;
+  background-color: #733785;
   transition: all 0.2s ease-in;
 }
 
@@ -504,14 +509,25 @@ a.button-hollow:hover, a.button-hollow:focus {
 
 .logo {
   font-family: "Damion", cursive;
+  font-size: 28px;
   display: block;
-  padding: 10px 0 0 0;
+  min-width: 120px;
 }
 
 /* Header: Navigation */
 
+.nav-block {
+  font-weight: 300;
+  font-size: 80%;
+  text-transform: uppercase;
+}
+
 .nav li a {
   padding: 10px;
+}
+
+.nav li a.active {
+  font-weight: 700;
 }
 
 @media only screen and (min-width: 700px) {
@@ -743,6 +759,8 @@ a.button-hollow:hover, a.button-hollow:focus {
 /* Team: Work with us */
 
 .form-join-block {
+  background-image: url("../../assets/img/bg/light-sharp-edges.png");
+  background-repeat: repeat;
   padding: 10px 0 30px;
 }
 
