--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,24 +168,6 @@ th {
 }
 
 
-/* Helpers: Notify */
-
-.notify {
-  color: #fff;
-  font-weight: 300;
-  text-align: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  padding: 10px;
-  z-index: 2000;
-}
-
-.notify--success {
-  background-color: green;
-}
-
 /* Helpers: Typography */
 
 .heading-primary {
@@ -305,6 +287,7 @@ th {
 
 }
 
+
 /* Helpers: Forms */
 
 .field-block {
@@ -354,6 +337,43 @@ textarea.input-text {
   min-height: 150px;
 }
 
+
+/* Helpers: Notify */
+
+.notify {
+  color: #fff;
+  font-weight: 300;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 2000;
+}
+
+.notify:after {
+  content: "";
+  font-family: "icomoon";
+  position: absolute;
+  left: 10px;
+}
+
+.notify--success {
+  background-color: #34945F;
+}
+
+.notify--success:after {
+  content: "\e206";
+}
+
+.notify--error {
+  background-color: #CF5658;
+}
+
+.notify--error:after {
+  content: "\e209";
+}
 
 /* Helpers: Buttons */
 
@@ -978,6 +998,11 @@ a.button-hollow:hover, a.button-hollow:focus {
   margin: 10px 0;
 }
 
+.email-each .icon-round-wrap {
+  color: #fff;
+  background-color: #9D67AD;
+}
+
 .email-each a {
   display: block;
 }
@@ -1001,6 +1026,7 @@ a.button-hollow:hover, a.button-hollow:focus {
   max-width: none;
 }
 
+
 /* Contact: Social Media */
 
 .social-block {
@@ -1011,6 +1037,15 @@ a.button-hollow:hover, a.button-hollow:focus {
 .social-icon-each {
   margin: 0 10px;
   display: inline-block;
+  border: 1px solid;
+}
+
+@media only screen and (min-width: 600px) {
+  .social-icon-each {
+    width: 72px;
+    height: 72px;
+    font-size: 30px;
+  }
 }
 
 
