--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -629,14 +629,52 @@ a.button-hollow:hover, a.button-hollow:focus {
 
 /* Header: Navigation */
 
+.nav-trigger {
+  font-size: 22px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  padding: 10px;
+}
+
 .nav-block {
   font-weight: 300;
   font-size: 80%;
   text-transform: uppercase;
+  text-align: right;
+  background-color: #444;
+  position: fixed;
+  right: -200px;
+  top: 47px;
+  bottom: 0;
+  height: 100%;
+  width: 200px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0 0 46px 0; /* bottom padding = height of the header */
+  box-shadow: -2px 0 3px rgba(0, 0, 0, 0.2);
+  visibility: hidden;
+  transition: all 0.2s linear;
+}
+
+.nav-block-open {
+  visibility: visible;
+  right: 0;
+  transition: all 0.2s linear;
+}
+
+.nav-block .button {
+  border: none;
 }
 
 .nav li a {
-  padding: 10px;
+  padding: 12px 10px;
+  display: block;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.nav li:last-of-type a {
+  border-bottom: none;
 }
 
 .nav li a.active {
@@ -644,17 +682,38 @@ a.button-hollow:hover, a.button-hollow:focus {
 }
 
 @media only screen and (min-width: 700px) {
+  .nav-trigger {
+    display: none;
+  }
+
   .logo-block {
     float: left;
   }
 
   .nav-block {
     float: right;
+    text-align: left;
+    background-color: transparent;
+    position: static;
+    right: auto;
+    top: auto;
+    bottom: auto;
+    height: auto;
+    width: auto;
+    overflow-x: static;
+    overflow-y: static;
+    padding: 0;
+    box-shadow: none;
+    visibility: visible;
   }
 
   .nav li, .nav li a {
     display: inline-block;
     vertical-align: top;
+  }
+
+  .nav li a {
+    border-bottom: none;
   }
 }
 
